<resources>
    <string name="app_name">flaggr</string>
    <string name="title_activity_maps">flaggr</string>
    <string name="newFlagDialogTitle">Set your flag!</string>
    <string name="newFlagDialogMessage">Enter your text:</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="ratingTextPlaceHolder">No ratings found.</string>
    <string name="settedFlagsCountTextPlaceHolder">This user has not yet set any flags.</string>
    <string name="ratingText">Your current rating is @rating. Good job!</string>
    <string name="rating">Rating:</string>
    <string name="settedFlagsText">You have already set @count flags! That\'s fun!</string>
    <string name="followedUser">You are now following @name. What a stalker!</string>
    <string name="SportsName">Sports</string>
    <string name="not_in_range_message">You are not close enough to this flag</string>
    <string name="choose_category">choose category</string>
    <string name="flag_text_hint">say something</string>
    <string name="closeByFlagsDialogTitle">Flags near you</string>
    <string name="closeByFlagsDialogMessage">Choose a flag</string>
    <string name="favouriteDisplayDialogTitle">Your favourite flags!</string>
    <string name="noFavourtieYet">You have no favourites yet</string>
    <string name="search_username_title">Search by Username:</string>
    <string name="showAll">Show all flags</string>
    <string name="flag_activity_title">Flag</string>
    <string name="followUser">Follow</string>
    <string name="upVote">Upvote</string>
    <string name="downVote">Downvote</string>
    <string name="noTextFoundDefault">Could\'t find Text for this flag!</string>
    <string name="flag_text">Flag Text: </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="noTopFlagsYet">There are no top ranked flags yet...</string>
    <string name="topRankingDisplayDialogTitle">Top flags</string>
    <string name="userName">Username</string>
    <string name="time">Time</string>
    <string name="upVoteRatio">Points</string>
    <string name="category">Category</string>
    <string name="login_first_time">Seems like you login for the first time!</string>
    <string name="welcome">Welcome</string>
    <string name="provide_username">Provide a username:</string>
    <string name="login_not_successful">Login was not successful!</string>
    <string name="try_again_later">Make sure you have internet access and please try again later</string>
    <string name="log_out">Logout</string>
    <string name="prompt_username">Username</string>
    <string name="provide_email">Please provide an email:</string>
    <string name="title_activity_close_flag_list">CloseFlagListActivity</string>
    <string name="user_name_not_found">No username found</string>
    <string name="show_close_flags">Show Close Flags</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="fieldUsername">Written by: </string>
    <string name="noRating">No Rating</string>
    <string name="Delete">Delete</string>
    <string name="noFavourtieSelectedToDeleteYet">Select a flag first</string>
    <string name="deleteFavouriteDialogTitle">Too many favourites!</string>
    <string name="deleteFavouriteDialogMessage">Before adding a new favourite, choose one of your old ones to delete</string>
    <string name="newFavouriteSuccessToast">This flag was successfully added to your favourites</string>
    <string name="newFollowSuccessToast">you are now following @</string>
    <string name="upVoteSuccessToast">you have successfully upvoted this flag</string>
    <string name="downVoteSuccessToast">you have successfully downvoted this flag</string>
    <string name="unFavouriteSuccessToast">this flag no longer is in your favourite\'s list</string>
    <string name="unFollowSuccessToast">you are no longer following @user</string>
    <string name="ratedFlagsDialogTitle">Your best rated flags</string>
    <string name="ratedFlagsDialogMessage">what would you like to do with those?</string>
    <string name="myFlagsDialogTitle">Your flags</string>
    <string name="myFlagsDialogMessage">What would you like to do with them?</string>
    <string name="unfollow">unfollow</string>
    <string name="nothingSelectedToDeleteYet">Nothing selected...</string>
    <string name="followingUsersTextPlaceHolder">You are not following any other users at the moment</string>
    <string name="followerUsersTextPlaceHolder">Sorry, nobody is currently following you</string>
    <string name="followingUsersDialogTitle">You are following these users!</string>
    <string name="followingUsersDialogMessage">what would you like to do with them?</string>
    <string name="followerUsersDialogTitle">These users follow you</string>
    <string name="followerUsersDialogMessage">Have a good look!</string>
    <string name="followingText">You are following @ users already!</string>
    <string name="followerText">There are @ users following you!</string>
    <string name="needToBeLogedInForThisMessage">You need to be loged in to do this</string>
    <string name="show">Show</string>
    <string name="ratedFlagsDialogTitleAlienProfile">\@user best rated flags</string>
    <string name="myFlagsDialogTitleAlienProfile">\@user flags</string>
    <string name="followingUsersDialogTitleAlienProfile">\@user is following these users!</string>
    <string name="followerUsersDialogTitleAlienProfile">These users follow @user</string>
    <string name="notAllowedToSeeMessage">you are not allowed to see this</string>
    <string name="noUsersYet">there are no users in this list yet</string>
    <string name="noFlagsYet">There are no flags to show yet</string>
    <string name="whatsNew">What\\\'s new?</string>
    <string name="user_posted_flag">\@user posted a new flag</string>
    <string name="noTime">No Time found</string>
    <string name="noCategory">No category</string>
    <string name="notInRadius">You can\'t read this flag, because it isn\'t in your radius.\n You have to get closer to read it.</string>
    <string name="options">Options</string>
    <string name="usersProfile">\@user Profile</string>
    <string name="gpsAlertDialogTitle">GPS Disabled!</string>
    <string name="gpsAlertDialogMessage">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="title_activity_no_google_play_services">NoGooglePlayServicesActivity</string>
    <string name="noGooglePlayServices">You seem to have an old version of Google Play Services Installed. For this app to work, you need a newer version. Please download a newer version and start this app again. See you then!</string>
    <string name="noGooglePlayServicesTitle">Google Play Service Problem</string>
    <string name="selectCategory">\n\t\tSelect a category:</string>
    <string name="logout_message">you are now logged out!</string>

</resources>
