<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ch.ethz.inf.vs.a3.vs_jdermelj.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="ch.ethz.inf.vs.a3.vs_jdermelj.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="ch.ethz.inf.vs.a3.vs_jdermelj.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" /><header
        android:fragment="ch.ethz.inf.vs.a3.vs_jdermelj_chat.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" /><header
        android:fragment="ch.ethz.inf.vs.a3.vs_jdermelj_chat.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications" /><header
        android:fragment="ch.ethz.inf.vs.a3.vs_jdermelj_chat.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
