<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/refresh_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ch.ethz.inf.vs.a4.funwithflags.ProfileActivity">

        <TextView android:text="@string/ratingTextPlaceHolder"
            android:id="@+id/ratingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="@string/settedFlagsCountTextPlaceHolder"
            android:id="@+id/settedFlagsCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:onClick="logOut"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/common_action_bar_splitter"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>



</android.support.v4.widget.SwipeRefreshLayout>

